tests/grammar/valid/v5_array_declaration.c
int tab[] = {1,2};
int tab[] = {};
int tab   [  ] = { 1 ,2  }   ;
int tab[14];
int tab[14]={};
int tab[3] = {1,2,3};
int tab[ 0 ] = { a= 6,1 > 2,f(g(1,2))};
int tab[5]
=
        {
                1
                ,
                2,
                3
        }
;