tests/grammar/invalid/v5_invalid_array_declaration.c
int tab[];
int tab[] = {};
int tab[-6];
